# rss_ringoccs

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  dev-requirements.txt  pyproject.toml  rss_ringoccs_deployer.py  setup.py  tox.ini  vcpkg.json
examples/complex_examples/: CMakeLists.txt  complex_abs_example.c
examples/geometry_examples/: CMakeLists.txt
examples/math_examples/: CMakeLists.txt
examples/numerical_examples/: CMakeLists.txt  five_point_derivative_example.c  newton_rapshon_bessel_function.c
examples/special_functions_examples/: CMakeLists.txt  complex_bessel_I0_plots.c
librssringoccs/: CMakeLists.txt
librssringoccs/complex/: CMakeLists.txt  rss_ringoccs_complex_abs.c  rss_ringoccs_complex_abs_squared.c  rss_ringoccs_complex_add.c  rss_ringoccs_complex_add_imag.c  rss_ringoccs_complex_add_real.c  rss_ringoccs_complex_argument.c  rss_ringoccs_complex_compare.c  rss_ringoccs_complex_conjugate.c  rss_ringoccs_complex_constants.c  rss_ringoccs_complex_cos.c  rss_ringoccs_complex_dist.c  rss_ringoccs_complex_divide.c  rss_ringoccs_complex_erf.c  rss_ringoccs_complex_erfc.c  rss_ringoccs_complex_exp.c  rss_ringoccs_complex_fadeeva.c  rss_ringoccs_complex_imag_part.c  rss_ringoccs_complex_log.c  rss_ringoccs_complex_multiply.c  rss_ringoccs_complex_polar.c  rss_ringoccs_complex_poly_deriv.c  rss_ringoccs_complex_polynomial.c  rss_ringoccs_complex_pow.c  rss_ringoccs_complex_real_part.c  rss_ringoccs_complex_reciprocal.c  rss_ringoccs_complex_rect.c  rss_ringoccs_complex_sin.c  rss_ringoccs_complex_sqrt.c  rss_ringoccs_complex_subtract.c  rss_ringoccs_complex_tan.c
librssringoccs/csv_tools/: CMakeLists.txt  rss_ringoccs_destroy_cal_csv.c  rss_ringoccs_destroy_cal_csv_members.c  rss_ringoccs_destroy_csv_data_members.c  rss_ringoccs_destroy_dlp_csv.c  rss_ringoccs_destroy_dlp_csv_members.c  rss_ringoccs_destroy_geo_csv.c  rss_ringoccs_destroy_geo_csv_members.c  rss_ringoccs_destroy_tau_csv.c  rss_ringoccs_destroy_tau_csv_members.c  rss_ringoccs_extract_csv_data.c  rss_ringoccs_get_cal.c  rss_ringoccs_get_dlp.c  rss_ringoccs_get_geo.c  rss_ringoccs_get_tau.c
librssringoccs/diffraction/: CMakeLists.txt  rss_ringoccs_gap_fresnel_diffraction.c  rss_ringoccs_left_straightedge_fresnel_diffraction.c  rss_ringoccs_one_slit_fraunhofer_diffraction.c  rss_ringoccs_right_straightedge_fresnel_diffraction.c  rss_ringoccs_ringlet_fresnel_diffraction.c  rss_ringoccs_ringlet_phase_fresnel_diffraction.c  rss_ringoccs_square_wave_fresnel_diffraction.c  rss_ringoccs_two_slit_fraunhofer_diffraction.c
librssringoccs/fft/: CMakeLists.txt  rss_ringoccs_complex_bluestein_chirp_z.c  rss_ringoccs_complex_cooley_tukey_fft.c  rss_ringoccs_complex_fft.c
librssringoccs/fresnel_kernel/: CMakeLists.txt  rss_ringoccs_fresnel_d2psi_dphi2.c  rss_ringoccs_fresnel_dpsi_dphi.c  rss_ringoccs_fresnel_dpsi_dphi_D.c  rss_ringoccs_fresnel_dpsi_dphi_elliptic.c  rss_ringoccs_fresnel_psi.c  rss_ringoccs_fresnel_psi_newton.c  rss_ringoccs_fresnel_psi_newton_D.c  rss_ringoccs_fresnel_psi_newton_D_old.c  rss_ringoccs_fresnel_psi_newton_dD_dphi.c  rss_ringoccs_fresnel_psi_newton_elliptic.c  rss_ringoccs_fresnel_psi_old.c  rss_ringoccs_fresnel_scale.c
librssringoccs/fresnel_transform/: CMakeLists.txt  rss_ringoccs_fresnel_transform.c  rss_ringoccs_fresnel_transform_cubic_interpolation.c  rss_ringoccs_fresnel_transform_cubic_interpolation_norm.c  rss_ringoccs_fresnel_transform_ellipse.c  rss_ringoccs_fresnel_transform_ellipse_norm.c  rss_ringoccs_fresnel_transform_legendre_even.c  rss_ringoccs_fresnel_transform_legendre_even_norm.c  rss_ringoccs_fresnel_transform_legendre_odd.c  rss_ringoccs_fresnel_transform_legendre_odd_norm.c  rss_ringoccs_fresnel_transform_newton.c  rss_ringoccs_fresnel_transform_newton_D.c  rss_ringoccs_fresnel_transform_newton_D_norm.c  rss_ringoccs_fresnel_transform_newton_D_old.c  rss_ringoccs_fresnel_transform_newton_D_old_norm.c  rss_ringoccs_fresnel_transform_newton_dD_dphi.c  rss_ringoccs_fresnel_transform_newton_dD_dphi_norm.c  rss_ringoccs_fresnel_transform_newton_norm.c  rss_ringoccs_fresnel_transform_norm.c  rss_ringoccs_fresnel_transform_perturbed_newton.c  rss_ringoccs_fresnel_transform_perturbed_newton_norm.c  rss_ringoccs_fresnel_transform_quadratic_interpolation.c  rss_ringoccs_fresnel_transform_quadratic_interpolation_norm.c  rss_ringoccs_fresnel_transform_quartic_D_interpolation.c  rss_ringoccs_fresnel_transform_quartic_D_interpolation_norm.c  rss_ringoccs_fresnel_transform_quartic_interpolation.c  rss_ringoccs_fresnel_transform_quartic_interpolation_norm.c
librssringoccs/geometry/: CMakeLists.txt  rss_ringoccs_cross_product.c  rss_ringoccs_inverse_orthographic_projection.c  rss_ringoccs_inverse_orthographic_projection_torus.c  rss_ringoccs_orthogonal_three_vector.c  rss_ringoccs_stereographic_projection.c  rss_ringoccs_stereographic_projection_torus.c  rss_ringoccs_three_vector_add.c  rss_ringoccs_three_vector_dot_product.c  rss_ringoccs_three_vector_euclidean_norm.c  rss_ringoccs_three_vector_normalize.c  rss_ringoccs_three_vector_rect.c  rss_ringoccs_three_vector_scale.c  rss_ringoccs_three_vector_x.c  rss_ringoccs_three_vector_y.c  rss_ringoccs_three_vector_z.c  rss_ringoccs_two_vector_add.c  rss_ringoccs_two_vector_dot_product.c  rss_ringoccs_two_vector_euclidean_norm.c  rss_ringoccs_two_vector_euclidean_norm_squared.c  rss_ringoccs_two_vector_normalize.c  rss_ringoccs_two_vector_polar.c  rss_ringoccs_two_vector_rect.c  rss_ringoccs_two_vector_scale.c  rss_ringoccs_two_vector_x.c  rss_ringoccs_two_vector_y.c
librssringoccs/interpolate/: CMakeLists.txt  rss_ringoccs_sorted_linear_interpolation.c
librssringoccs/math/: CMakeLists.txt  rss_ringoccs_abs.c  rss_ringoccs_arctan.c  rss_ringoccs_arctan2.c  rss_ringoccs_copysign.c  rss_ringoccs_cos.c  rss_ringoccs_cosh.c  rss_ringoccs_erf.c  rss_ringoccs_erfc.c  rss_ringoccs_erfcx.c  rss_ringoccs_exp.c  rss_ringoccs_factorial.c  rss_ringoccs_faddeeva_im.c  rss_ringoccs_log.c  rss_ringoccs_poly_deriv.c  rss_ringoccs_polynomial.c  rss_ringoccs_reverse_array.c  rss_ringoccs_sin.c  (+6 more)
(+240 files in other folders)
